# elastic_semantic_search

./: .gitignore  .pre-commit-config.yaml  DEVGUIDE.md  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/sample_data/: document_0.txt  document_1.txt  document_2.txt  document_3.txt  document_4.txt  document_5.txt  document_6.txt  document_7.txt  document_8.txt
src/dataset/: embeddings.py  index.py  search.py
src/utils/: constants.py  logging.py  logging.yaml
